adds suffle cards

--- a/client/src/components/games/memory/index.html
+++ b/client/src/components/games/memory/index.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory card game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    
+    <p class="header">
+        <span class="material-symbols-outlined">
+            style
+            </span>
+            &nbsp;
+        Memory Card Game
+            &nbsp;
+        <span class="material-symbols-outlined">
+            style
+            </span>
+        <div class="player">
+            Player Name
+        </div>
+    </p>
+    
     <div class="wrapper">
     <ul class="cards">
         <li class="card">
@@ -107,14 +124,14 @@
         </div>
         </li>
         <div class="details">
-        <p class="time">Time: <span><b>20</b>s</span></p>
-        <p class="flips">Flips: <span><b>0</b></span></p>
+            <p class="time">Time: <span><b>20</b>s</span></p>
+            <p class="flips">Flips: <span><b>0</b></span></p>
         <button>Refresh</button>
         </div>
     </ul>
     </div>
 
     <script src="script.js"></script>
-    
+
 </body>
 </html>
