--- a/client/src/components/lobby/navigation.css
+++ b/client/src/components/lobby/navigation.css
@@ -1,9 +1,8 @@
-/* * {
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: grey;
-} */
+}
 
 li, a, button {
     font-family:Arial, Helvetica, sans-serif;
@@ -19,6 +18,7 @@ header {
     align-items: center;
     padding: 30px 10%;
     background-color: rgb(0, 0, 0);
+    margin: 0;
 }
 
 .logo {
@@ -40,7 +40,7 @@ header {
 }
 
 .nav_links li a:hover {
-    color: blueviolet;
+    color: rgb(43, 183, 226);
 }
 
 button {
