--- a/client/src/components/lobby/navigation.css
+++ b/client/src/components/lobby/navigation.css
@@ -1,70 +1,72 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-li, a, button {
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: beige;
-    text-decoration: none;
+li,
+a,
+button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: beige;
+  text-decoration: none;
 }
 
 header {
-    display: flex;
-    align-items: center;
-    padding: 30px 10%;
-    background-color: rgb(0, 0, 0);
-    margin: 0;
+  display: flex;
+  align-items: center;
+  padding: 30px 10%;
+  background-color: rgb(0, 0, 0);
+  margin: 0;
 }
 
 .logo {
-    cursor: pointer;
-    margin-right: auto;
+  cursor: pointer;
+  margin-right: auto;
 }
 
 .nav_links {
-    list-style: none;
+  list-style: none;
 }
 
 .nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
+  display: inline-block;
+  padding: 0px 20px;
 }
 
 .nav_links li a {
-    transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .nav_links li a:hover {
-    color: rgb(43, 183, 226);
+  color: rgb(43, 183, 226);
 }
 
 button {
-    margin-left: 18px;
-    padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+  margin-left: 18px;
+  padding: 9px 25px;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
 }
 
 button:hover {
-    background-color: rgba(0,136,169,0.7)
+  background-color: rgba(0, 136, 169, 0.7);
 }
 
 #logout {
-    background-color: red;
+  background-color: red;
 }
 
 #logout:hover {
-    background-color: rgb(179, 0, 0);
+  background-color: rgb(179, 0, 0);
 }
 
 #navh1 {
-    color: white;
-    justify-content: left;
+  color: white;
+  justify-content: left;
 }
