--- a/client/src/components/lobby/navigation.css
+++ b/client/src/components/lobby/navigation.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+#root {
+    height: 811px;
+}
+
 li, a, button {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: 500;
@@ -56,3 +60,4 @@ button {
 button:hover {
     background-color: rgba(0,136,169,0.7)
 }
+
