--- a/client/src/components/tictactoe/singleplayer/solo.css
+++ b/client/src/components/tictactoe/singleplayer/solo.css
@@ -16,7 +16,12 @@ main {
 
 .winner-message {
   font-size: 30px;
-  color: black;
+  color: rgb(255, 0, 0);
+  text-shadow:
+  -1px -1px 0 rgb(13, 0, 0),
+   1px -1px 0 rgb(13, 0, 0),
+  -1px  1px 0 rgb(13, 0, 0),
+   1px  1px 0 rgb(13, 0, 0);
   justify-content: center;
   display: flex;
   align-items: center;
@@ -73,4 +78,15 @@ footer {
 
 .header-div {
   margin-bottom: 20px;
+}
+
+.app {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+  rgba(0, 0, 0, 0.5)), url('../../images/tictactoe/tictactoe.jpg');
+  height: 100%;
+  background-position: center;
+
+  background-size: cover;
+
+  margin-top: -15px;
 }
