--- a/client/src/components/hangman/singleplayer/style.css
+++ b/client/src/components/hangman/singleplayer/style.css
@@ -73,8 +73,11 @@
 }
 
 .hangman-hero {
-  background-image: linear-gradient(rgba(255, 255, 255, 0),
-  rgba(249, 249, 249, 0.5)), url('../../images/hangmanIMG/heroHangman2.jpg');
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0),
+      rgba(249, 249, 249, 0.5)
+    ),
+    url('../../images/hangmanIMG/heroHangman2.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
