--- a/client/src/components/lobby/navigation.css
+++ b/client/src/components/lobby/navigation.css
@@ -5,15 +5,17 @@
 }
 
 #root {
-    height: 811px;
+  height: 811px;
 }
 
-li, a, button {
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: beige;
-    text-decoration: none;
+li,
+a,
+button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: beige;
+  text-decoration: none;
 }
 
 header {
@@ -72,4 +74,3 @@ button:hover {
   color: white;
   justify-content: left;
 }
-
