--- a/client/src/components/lobby/navigation.css
+++ b/client/src/components/lobby/navigation.css
@@ -21,7 +21,7 @@ button {
 header {
   display: flex;
   align-items: center;
-  padding: 30px 10%;
+  padding: 10px 5%;
   background-color: rgb(0, 0, 0);
   margin: 0;
 }
@@ -29,6 +29,8 @@ header {
 .logo {
   cursor: pointer;
   margin-right: auto;
+  margin-left: auto;
+  max-height: 150px;
 }
 
 .nav_links {
@@ -48,6 +50,7 @@ header {
   color: rgb(43, 183, 226);
 }
 
+/* buttons are a little big */
 button {
   margin-left: 18px;
   padding: 9px 25px;
@@ -73,4 +76,5 @@ button:hover {
 #navh1 {
   color: white;
   justify-content: left;
+  text-align: left;
 }
